# solana_unity

./: .gitignore  Cargo.toml  IDLParser.cs  README.md  SolanaExample.cs  SolanaInstructions.cs  SolanaUnity.cs  SolanaUsageExample.cs  TraderProgramClient.cs  trader_contract.json
.cargo/: config.toml
Assets/Scripts/: SolanaUnity.cs
src/: account.rs  error.rs  ffi.rs  instruction.rs  lib.rs  pda.rs  rpc.rs  transaction.rs
tests/: integration_tests.rs  solana_unity_tests.rs
