[package]
name = "solana_unity"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_unity"
crate-type = ["cdylib"]  # Builds a C-compatible DLL

[dependencies]
solana-client = "1.16"
solana-sdk = "1.16"
solana-transaction-status = "1.16"
solana-account-decoder = "1.16"
tokio = { version = "1.0", features = ["full"] }
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
bincode = "1.3"
# Use an exact version of tiny-bip39 that works with zeroize < 1.4
tiny-bip39 = { version = "0.8.2", optional = true }

[dev-dependencies]
mockall = "0.11.3"

[features]
default = []
bip39 = ["tiny-bip39"]
