[package]
name = "solana_unity"
version = "0.1.0"
edition = "2021"
authors = ["SEND SDK Team"]
description = "Solana Unity SDK for bridging Solana and Unity"
repository = "https://github.com/send_sdk/solana_unity"
license = "MIT"

[lib]
name = "solana_unity"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-sdk = "1.17.7"
solana-client = "1.17.7"
solana-account-decoder = "1.17.7"
solana-transaction-status = "1.17.7"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
libc = "0.2"
tiny-bip39 = { version = "0.8.2", optional = true }
thiserror = "1.0"

[dev-dependencies]
mockall = "0.11.4"

[features]
default = []
bip39 = ["dep:tiny-bip39"]
